// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SourceTypes /> SourceTypeItem subcomponent renders 1`] = `
<ListGroupItem
  allowFocus={false}
  disabled={true}
  key="test"
>
  <span
    className="text-capitalize"
  >
    test
  </span>
</ListGroupItem>
`;

exports[`<SourceTypes /> renders correctly 1`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <form
        onSubmit={[Function]}
      >
        <FormGroup
          bsClass="form-group"
        >
          <InputGroup
            bsClass="input-group"
          >
            <FormControl
              bsClass="form-control"
              componentClass="input"
              disabled={true}
              inputRef={[Function]}
              onChange={[Function]}
              type="text"
              value=""
            />
            <InputGroupButton
              bsClass="input-group-btn"
            >
              <Button
                bsStyle="primary"
                disabled={true}
                pullRight={false}
                tipPlacement="top"
                type="submit"
              >
                <Icon
                  faStyle="fas"
                  fixedWidth={false}
                  name="plus-square"
                  pullRight={false}
                  style={
                    Object {
                      "paddingLeft": "3px",
                    }
                  }
                />
              </Button>
            </InputGroupButton>
          </InputGroup>
          <div
            className="input-form-error-none"
          >
            <span
              className="input-error-message"
            >
              None
            </span>
          </div>
        </FormGroup>
      </form>
      <div>
        <SourceTypeItem
          isDisabled={false}
          onRemove={[Function]}
          sourceType="bar"
        />
        <SourceTypeItem
          isDisabled={false}
          onRemove={[Function]}
          sourceType="foo"
        />
      </div>
    </PanelBody>
  }
  description="Configure a list of allowable source types. When a user creates a new isolate they will
        only be able to select a source type from this list. If this feature is disabled, users
        will be able to enter any string as a source type."
  extraIcon={null}
  title="Source Types"
/>
`;

exports[`<SourceTypes /> renders correctly 2`] = `
<AdministrationSection
  content={
    <PanelBody
      bsClass="panel"
      collapsible={false}
    >
      <form
        onSubmit={[Function]}
      >
        <FormGroup
          bsClass="form-group"
        >
          <InputGroup
            bsClass="input-group"
          >
            <FormControl
              bsClass="form-control"
              componentClass="input"
              disabled={true}
              inputRef={[Function]}
              onChange={[Function]}
              type="text"
              value=""
            />
            <InputGroupButton
              bsClass="input-group-btn"
            >
              <Button
                bsStyle="primary"
                disabled={true}
                pullRight={false}
                tipPlacement="top"
                type="submit"
              >
                <Icon
                  faStyle="fas"
                  fixedWidth={false}
                  name="plus-square"
                  pullRight={false}
                  style={
                    Object {
                      "paddingLeft": "3px",
                    }
                  }
                />
              </Button>
            </InputGroupButton>
          </InputGroup>
          <div
            className="input-form-error-none"
          >
            <span
              className="input-error-message"
            >
              None
            </span>
          </div>
        </FormGroup>
      </form>
      <div />
    </PanelBody>
  }
  description="Configure a list of allowable source types. When a user creates a new isolate they will
        only be able to select a source type from this list. If this feature is disabled, users
        will be able to enter any string as a source type."
  extraIcon={
    <Checkbox
      checked={null}
      label="Enable"
      onClick={[Function]}
      partial={false}
      pullRight={false}
    />
  }
  title="Source Types"
/>
`;
